--- a/04/index.html
+++ b/04/index.html
@@ -6,14 +6,15 @@
   <title>자바스크립트</title> 
 
   <link rel="stylesheet" href="./styles/index.css">
-  <script src="./scripts/str.js"></script>
+  <script src="./scripts/index.js"></script>
   
    
 </head>
 <body>
   <div id="root">
-    <header><h1>폭탄게임</h1></header>
+    <header><h1>폭탄게임(firebase hosting)</h1></header>
     <main id="content">
+     
       <section id="board">
         <div class="boardRow">
           <div class="boardBox" id="box1" onclick="show(1);">1</div>
